tests/baselines/reference/InterfaceNotExtendingStruct_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/InterfaceNotExtendingStruct_basic.ts(5,21): error TS2312: An interface may only extend a class or another interface.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/InterfaceNotExtendingStruct_basic.ts (1 errors) ====
    struct S {
    	bar: string;
    }
    
    interface I extends S {
                        ~
!!! error TS2312: An interface may only extend a class or another interface.
    }
    